Reduce padding to fix word jumping in why pulumi menu (#3172)

--- a/pulumi-hugo/themes/default/theme/src/scss/_header.scss
+++ b/pulumi-hugo/themes/default/theme/src/scss/_header.scss
@@ -211,6 +211,10 @@
 
                             .header-nav-one-col-drop-down {
                                 @apply pt-1;
+
+                                li {
+                                    @apply px-0;
+                                }
                             }
 
                             .header-nav-two-col-drop-down {
